[package]
name = "lib-plugin-verify"
version.workspace = true
edition.workspace = true
license = "MIT"
authors.workspace = true
description = "Plugin signature and checksum verification"
repository = "https://github.com/adi-family/lib-plugin"
keywords = ["plugin", "signature", "checksum", "verification", "ed25519"]
categories = ["cryptography", "development-tools"]

[features]
default = []
keygen = ["rand_core"]
signing = []

[dependencies]
sha2.workspace = true
ed25519-dalek.workspace = true
base64.workspace = true
thiserror.workspace = true
rand_core = { version = "0.6", features = ["getrandom"], optional = true }
